--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,7 +1,7 @@
 # This workflow will build a Swift project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-swift
 
-name: Build with Swift 6.0
+name: Swift
 
 on:
   push:
@@ -16,17 +16,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-
-    - name: Setup Swift 6.0
-      uses: fwal/setup-swift@v1
-      with:
-        swift-version: 6.0
-
-    - name: Verify Swift version
-      run: swift --version
-      
     - name: Build
       run: swift build -v
-      
     - name: Run tests
       run: swift test -v
